# qtrade

./: .env.example  .gitignore  CHANGELOG.md  COMPLETION_REPORT.md  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  analyze_results.py  docker-compose.yml  paper_trading.bat  pyproject.toml  run_experiments.py  test_pullback_bb_mid.py  test_simple_backtest.py
.claude/skills/: qtrade.md
configs/: backtest_example.yaml  default.yaml  live_trading_example.yaml  ml_xgboost.yaml  multi_strategy_example.yaml  optimization_example.yaml  quick.yaml
docs/: ARCHITECTURE.md
models/: registry.json
results/: bb_rsi_300750.json  bb_rsi_600519.json  experiment_output.txt  quantstats_report.html
scripts/: backtest_bb_rsi.py  backtest_hybrid_comparison.py  backtest_lhb_pullback.py  backtest_pullback_20d.py  backtest_with_fund_flow.py  data_driven_backtest.py  download_lhb_kline.py  download_main_board.py  experiment_new_strategies.py  paper_trading.py  test_bb_rsi_comparison.py  test_csi500.py  test_csi500_expanded.py  test_new_strategies.py  test_regime_split.py  test_trend_5d.py  tune_trend_5d.py
src/qtrade/: __init__.py  __main__.py  cli.py  config.py  constants.py  logging_setup.py
src/qtrade/api/: __init__.py  main.py
src/qtrade/backtest/: __init__.py  analyzers.py  broker_config.py  data_feed.py  engine.py  performance.py  report.py  signal_strategy.py  trade_log.py
src/qtrade/data/: __init__.py  cache.py  fetcher.py  lhb.py  pytdx_client.py  registry.py  schema.py  source.py  storage.py  storages.py
src/qtrade/eda/: __init__.py  analyzer.py  correlation.py  distribution.py  quality.py  report.py  stability.py
src/qtrade/features/: __init__.py  engine.py  momentum.py  target.py  technical.py  volatility.py  volume.py
src/qtrade/live_trading/: __init__.py  alerts.py  baidu_feed.py  broker.py  data_feed.py  live_trader.py  order_manager.py  position_sync.py  risk_monitor.py  tdx_feed.py
src/qtrade/ml/: __init__.py  cv.py  pipeline.py  registry.py
src/qtrade/optimization/: __init__.py  bayesian.py  grid_search.py  walk_forward.py
src/qtrade/portfolio/: __init__.py  combiner.py  ensemble.py  portfolio.py
src/qtrade/qlib_integration/: __init__.py  adapter.py  expressions.py  factors.py
src/qtrade/risk_control/: __init__.py  circuit_breaker.py  limits.py  (+2 more)
(+42 files in other folders)
