[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qtrade"
version = "1.0.0"
description = "A-share quantitative trading framework with ML support and live trading"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "QTrade Team"}
]
keywords = ["quantitative trading", "algorithmic trading", "machine learning", "backtesting", "A-share"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "backtrader>=1.9.78",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "plotly>=5.15.0",
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
data = [
    "pytdx>=1.72",
    "akshare>=1.10.0",
    "pyarrow>=12.0.0",
]
ml = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
]
dl = [
    "torch>=2.0",
]
live = [
    "websockets>=11.0",
    "alpaca-trade-api>=3.2.0",
    "requests>=2.31.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "streamlit>=1.25.0",
    "python-multipart>=0.0.6",
]
optimization = [
    "optuna>=3.3.0",
]
quantstats = [
    "quantstats>=0.0.62",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
all = ["qtrade[data,ml,dl,live,web,optimization,quantstats]"]

[project.urls]
Homepage = "https://github.com/qtrade/qtrade"
Documentation = "https://qtrade.readthedocs.io"
Repository = "https://github.com/qtrade/qtrade"
Issues = "https://github.com/qtrade/qtrade/issues"

[project.scripts]
qtrade = "qtrade.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
